Fix z-index because Toast uses z-index 1102

--- a/src/assets/css/layout/_menu.scss
+++ b/src/assets/css/layout/_menu.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: 20rem;
   height: calc(100vh - 8rem);
-  z-index: 1999;
+  z-index: 1099;
   overflow-y: auto;
   user-select: none;
   top: 6rem;
