--- a/src/assets/css/layout/_responsive.scss
+++ b/src/assets/css/layout/_responsive.scss
@@ -91,7 +91,7 @@
       position: fixed;
       top: 0;
       left: 0;
-      z-index: 1998;
+      z-index: 1098;
       width: 100%;
       height: 100%;
       background-color: var(--maskbg);
