--- a/src/assets/css/layout/_topbar.scss
+++ b/src/assets/css/layout/_topbar.scss
@@ -3,7 +3,7 @@
 .layout-topbar {
   position: fixed;
   height: 4rem;
-  z-index: 1997;
+  z-index: 1097;
   left: 0;
   top: 0;
   width: 100%;
